@@ -14273,4 +14273,6 @@ Matched, but too many substrings
  0: aa
  1: <unset>
 
+/(?<N111>(?J)(?<N111>1(111111)11|)1|1|)(?(<N111>)1)/
+
 /-- End of testinput2 --/
